    would affect these (some changes require page to be reloaded).
21. Only show swipe settings if browser suppors touch events.
22. Make background image URLs reactive elements to force refresh.
23. Each time an item is browsed, a menu opened, or a dialog opened, add a
    fake item to the browser's history to allow trapping browser's back
    button.

5.3.4
-----
1. Fix drag'n'drop on iOS by only using polyfill for Android.
2. If URL contains 'dndPolyfill=0' then always disable polyfill, likewise
   always enable if URL has 'dndPolyfill=1'
3. Fix subtitle links when 'Group all lists by release type' is enabled.
4. Show user-defined roles in 'Advanced search'
5. Fix unpinned queue border colour.

5.3.3
-----
1. Save player settings before opening 'Extra settings'.
2. Fix highlighting track of artist with user defined role.
3. Show user defined roles in track info.
4. Change genre icon.
5. Different highlight for matching artists as opposed to search in list.
6. Tidy up artist title strings if navigating through multiple roles.
7. If browsing non basic artist roles then show role name before years in
   subtoolbar when listing an artist's albums.
8. 'Pulse' play button if waiting-to-play.
9. Attempt to prevent flash of original background colour when open page in
   iframe.

5.3.2
-----
1. Only show play/add button text if showing detailed sub-toolbar.
2. Don't add HTML formatting to audio, or other clickable, entries.
3. Fix listing album tracks under My Music / Works / Composer / COMPOSER /
   WORK / ALBUM
4. Fix background colour of 'Update information' screen.
5. Fix showing all tracks of a multi-artist album if navigating from an
   artist, and Material is configured to show all.
6. Use no-artist filter always, if set.
7. Fix tinted background when not using colour from cover.
8. Reduce opacity of current artist highlight in track list.

5.3.1
-----
1. Delay drag-n-drop, via Polyfill, for 1/4 of a second so that it does not
   interfere with scrolling.